archive/old_evaluations/run_20251029_065558/task_data_validation/validation_output.txt
=== Command 1 ===
Command: python -c from validator import validate_email, validate_phone; assert validate_email('test@example.com'); assert not validate_email('invalid')
Exit code: 1
Stdout:

Stderr:
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/tmp/tmp0n_im5rl/create-validator-py-with-validate-email-email-v/validator.py", line 87
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 87)


